# a2a-protocol-demo

./: .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json
app/: travel_ui.py
app/agents/activities_agent/: agent.py
app/agents/activities_agent/.well-known/: agent.json
app/agents/flight_agent/: agent.py
app/agents/flight_agent/.well-known/: agent.json
app/agents/host_agent/: agent.py  task_manager.py
app/agents/stay_agent/: agent.py
app/agents/stay_agent/.well-known/: agent.json
app/common/: a2a_client.py  a2a_server.py
app/mcp/: __main__.py  server.py
app/shared/: schemas.py
